@@ -485,6 +485,7 @@ public interface StorageServiceMBean extends NotificationEmitter
     // allows a node that have been started without joining the ring to join it
     public void joinRing() throws IOException;
     public boolean isJoined();
+    public boolean isSurveyMode();
 
     public void setRpcTimeout(long value);
     public long getRpcTimeout();
